--- a/saurya/New Template Using Bootstrap/index.html
+++ b/saurya/New Template Using Bootstrap/index.html
@@ -28,7 +28,7 @@
 				<ul class="navbar-nav ml-auto align-items-center"
 				id="navResponsive">
 					<li><a class="nav-link active" href="#">ABOUT</a></li>
-					<li><a class="nav-link" href="#">EXPERTISE</a></li>
+					<li><a class="nav-link" href="#">नेपाली पब्लिक</a></li>
 					<li><a class="nav-link" href="#">INSIGHT</a></li>
 					<li><a class="nav-link" href="#">OUR PEOPLE</a></li>
 					<li><a class="nav-link" href="#">LOCATIONS</a></li>	
@@ -220,7 +220,7 @@
 			<p class="text-success">
 				<i>Define a Substantially Better</i>
 			</p>
-			<h2>Company Strong Points</h2>
+			<h2>नेपाली पब्लिक</h2>
 			<p class="text-secondary">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
 			</p>
