--- a/saurya/New Template Using Bootstrap/index.html
+++ b/saurya/New Template Using Bootstrap/index.html
@@ -20,8 +20,7 @@
 	<!-- <div class="container-fluid"> -->
 		<div class="container padding">
 			<a class="navbar-brand" href="#"><img src="img/head-icon.png"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-			onclick="fontChange()">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
@@ -631,7 +630,7 @@
 	<hr class="" style="background-color: #d5d5d5;">
 
 	<div class="row">
-		<div class="col-sm-6 col-md-6 col-lg-3">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
 			<div class="footer-elem">
 				<h4>
 					(+123) 456 789 000				
@@ -642,7 +641,7 @@
 			</div>
 		</div>
 
-		<div class="col-sm-6 col-md-6 col-lg-3">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
 			<div class="footer-elem">
 				<ul>
 					<li>Help Center</li>
@@ -654,7 +653,7 @@
 			</div>
 		</div>
 
-		<div class="col-sm-6 col-md-6 col-lg-3">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
 			<div class="footer-elem">
 				<h5>Company Informations</h5>
 				<h6 class="text-success">John Doe</h6>
@@ -667,7 +666,7 @@
 			</div>
 		</div>
 
-		<div class="col-sm-6 col-md-6 col-lg-3">
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
 			<div class="footer-elem">
 				<h5>Contace Details</h5>
 				<p>
